examples/connect-greeter/output/rpc-cgo.h

// rpccgoMsgGreeterv1GreeterSayHello invokes the message unary client entrypoint for examples.connect.greeter.v1.Greeter.SayHello.
//
extern int32_t rpccgoMsgGreeterv1GreeterSayHello(uintptr_t requestPtr, int32_t requestLen, uintptr_t* responsePtr, int32_t* responseLen);
// rpccgoMsgGreeterv1GreeterCollectStart starts the message client-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Collect.
//
extern int32_t rpccgoMsgGreeterv1GreeterCollectStart(int32_t* handle);
// rpccgoMsgGreeterv1GreeterCollectSend sends a message request to the client-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Collect.
//
extern int32_t rpccgoMsgGreeterv1GreeterCollectSend(int32_t handle, uintptr_t requestPtr, int32_t requestLen);
// rpccgoMsgGreeterv1GreeterCollectFinish finishes the message client-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Collect.
//
extern int32_t rpccgoMsgGreeterv1GreeterCollectFinish(int32_t handle, uintptr_t* responsePtr, int32_t* responseLen);
// rpccgoMsgGreeterv1GreeterCollectCancel cancels the message client-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Collect.
//
extern int32_t rpccgoMsgGreeterv1GreeterCollectCancel(int32_t handle);
// rpccgoMsgGreeterv1GreeterBroadcastStart starts the message server-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Broadcast.
//
extern int32_t rpccgoMsgGreeterv1GreeterBroadcastStart(uintptr_t requestPtr, int32_t requestLen, int32_t* handle);
// rpccgoMsgGreeterv1GreeterBroadcastRead reads a message response from the server-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Broadcast.
//
extern int32_t rpccgoMsgGreeterv1GreeterBroadcastRead(int32_t handle, uintptr_t* responsePtr, int32_t* responseLen);
// rpccgoMsgGreeterv1GreeterBroadcastFinish finishes the message server-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Broadcast.
//
extern int32_t rpccgoMsgGreeterv1GreeterBroadcastFinish(int32_t handle);
// rpccgoMsgGreeterv1GreeterBroadcastCancel cancels the message server-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Broadcast.
//
extern int32_t rpccgoMsgGreeterv1GreeterBroadcastCancel(int32_t handle);
// rpccgoMsgGreeterv1GreeterChatStart starts the message bidi-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Chat.
//
extern int32_t rpccgoMsgGreeterv1GreeterChatStart(int32_t* handle);
// rpccgoMsgGreeterv1GreeterChatSend sends a message request to the bidi-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Chat.
//
extern int32_t rpccgoMsgGreeterv1GreeterChatSend(int32_t handle, uintptr_t requestPtr, int32_t requestLen);
// rpccgoMsgGreeterv1GreeterChatRead reads a message response from the bidi-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Chat.
//
extern int32_t rpccgoMsgGreeterv1GreeterChatRead(int32_t handle, uintptr_t* responsePtr, int32_t* responseLen);
// rpccgoMsgGreeterv1GreeterChatCloseSend closes the message bidi-streaming client send side for examples.connect.greeter.v1.Greeter.Chat.
//
extern int32_t rpccgoMsgGreeterv1GreeterChatCloseSend(int32_t handle);
// rpccgoMsgGreeterv1GreeterChatFinish finishes the message bidi-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Chat.
//
extern int32_t rpccgoMsgGreeterv1GreeterChatFinish(int32_t handle);
// rpccgoMsgGreeterv1GreeterChatCancel cancels the message bidi-streaming client entrypoint for examples.connect.greeter.v1.Greeter.Chat.
//
extern int32_t rpccgoMsgGreeterv1GreeterChatCancel(int32_t handle);
// rpccgoTakeErrorText takes stored Go error text for a C caller and releases the error id.
//
extern int32_t rpccgoTakeErrorText(int32_t errID, uintptr_t* textPtr, int32_t* textLen);
// rpccgoRelease releases memory previously handed to C through rpccgo ABI helpers.
//
extern int32_t rpccgoRelease(uintptr_t ptr);