examples/connect-greeter/dart-client/lib/gen/greeter.greeter.rpccgo.dart

// Code generated by protoc-gen-rpc-cgo-dart. DO NOT EDIT.
//
// Source: greeter.proto

@ffi.DefaultAsset('package:rpccgo_connect_greeter_dart_client/rpccgo.dart')
library;

import 'dart:convert' as convert;
import 'dart:ffi' as ffi;
import 'dart:typed_data' as typed_data;

import 'package:ffi/ffi.dart' as pkg_ffi;

import 'greeter.pb.dart' as pb;

// rpccgo Dart FFI message client generated file for Greeter

typedef _RpccgoReleaseNative = ffi.Int32 Function(ffi.UintPtr ptr);
typedef _RpccgoTakeErrorTextNative =
    ffi.Int32 Function(
      ffi.Int32 errID,
      ffi.Pointer<ffi.UintPtr> textPtr,
      ffi.Pointer<ffi.Int32> textLen,
    );
typedef _RpccgoMessageUnaryNative =
    ffi.Int32 Function(
      ffi.UintPtr requestPtr,
      ffi.Int32 requestLen,
      ffi.Pointer<ffi.UintPtr> responsePtr,
      ffi.Pointer<ffi.Int32> responseLen,
    );
typedef _RpccgoStreamStartNative =
    ffi.Int32 Function(ffi.Pointer<ffi.Int32> handle);
typedef _RpccgoServerStreamStartNative =
    ffi.Int32 Function(
      ffi.UintPtr requestPtr,
      ffi.Int32 requestLen,
      ffi.Pointer<ffi.Int32> handle,
    );
typedef _RpccgoStreamSendNative =
    ffi.Int32 Function(
      ffi.Int32 handle,
      ffi.UintPtr requestPtr,
      ffi.Int32 requestLen,
    );
typedef _RpccgoStreamReadNative =
    ffi.Int32 Function(
      ffi.Int32 handle,
      ffi.Pointer<ffi.UintPtr> responsePtr,
      ffi.Pointer<ffi.Int32> responseLen,
    );
typedef _RpccgoStreamFinishNative =
    ffi.Int32 Function(
      ffi.Int32 handle,
      ffi.Pointer<ffi.UintPtr> responsePtr,
      ffi.Pointer<ffi.Int32> responseLen,
    );
typedef _RpccgoStreamFinishVoidNative = ffi.Int32 Function(ffi.Int32 handle);
typedef _RpccgoStreamCancelNative = ffi.Int32 Function(ffi.Int32 handle);

@ffi.Native<_RpccgoReleaseNative>(symbol: 'rpccgoRelease')
external int _rpccgoReleaseRaw(int ptr);

@ffi.Native<_RpccgoTakeErrorTextNative>(symbol: 'rpccgoTakeErrorText')
external int _rpccgoTakeErrorTextRaw(
  int errID,
  ffi.Pointer<ffi.UintPtr> textPtr,
  ffi.Pointer<ffi.Int32> textLen,
);

@ffi.Native<_RpccgoMessageUnaryNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterSayHello',
)
external int _sayHelloRaw(
  int requestPtr,
  int requestLen,
  ffi.Pointer<ffi.UintPtr> responsePtr,
  ffi.Pointer<ffi.Int32> responseLen,
);

@ffi.Native<_RpccgoStreamStartNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterCollectStart',
)
external int _collectStartRaw(ffi.Pointer<ffi.Int32> handle);

@ffi.Native<_RpccgoStreamSendNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterCollectSend',
)
external int _collectSendRaw(int handle, int requestPtr, int requestLen);

@ffi.Native<_RpccgoStreamFinishNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterCollectFinish',
)
external int _collectFinishRaw(
  int handle,
  ffi.Pointer<ffi.UintPtr> responsePtr,
  ffi.Pointer<ffi.Int32> responseLen,
);

@ffi.Native<_RpccgoStreamCancelNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterCollectCancel',
)
external int _collectCancelRaw(int handle);

@ffi.Native<_RpccgoServerStreamStartNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterBroadcastStart',
)
external int _broadcastStartRaw(
  int requestPtr,
  int requestLen,
  ffi.Pointer<ffi.Int32> handle,
);

@ffi.Native<_RpccgoStreamReadNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterBroadcastRead',
)
external int _broadcastReadRaw(
  int handle,
  ffi.Pointer<ffi.UintPtr> responsePtr,
  ffi.Pointer<ffi.Int32> responseLen,
);

@ffi.Native<_RpccgoStreamFinishVoidNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterBroadcastFinish',
)
external int _broadcastFinishRaw(int handle);

@ffi.Native<_RpccgoStreamCancelNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterBroadcastCancel',
)
external int _broadcastCancelRaw(int handle);

@ffi.Native<_RpccgoStreamStartNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterChatStart',
)
external int _chatStartRaw(ffi.Pointer<ffi.Int32> handle);

@ffi.Native<_RpccgoStreamSendNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterChatSend',
)
external int _chatSendRaw(int handle, int requestPtr, int requestLen);

@ffi.Native<_RpccgoStreamReadNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterChatRead',
)
external int _chatReadRaw(
  int handle,
  ffi.Pointer<ffi.UintPtr> responsePtr,
  ffi.Pointer<ffi.Int32> responseLen,
);

@ffi.Native<_RpccgoStreamFinishVoidNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterChatCloseSend',
)
external int _chatCloseSendRaw(int handle);

@ffi.Native<_RpccgoStreamFinishVoidNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterChatFinish',
)
external int _chatFinishRaw(int handle);

@ffi.Native<_RpccgoStreamCancelNative>(
  symbol: 'rpccgoMsgGreeterv1GreeterChatCancel',
)
external int _chatCancelRaw(int handle);

class GreeterRpccgoClient {
  const GreeterRpccgoClient();
  int _sayHello(
    int requestPtr,
    int requestLen,
    ffi.Pointer<ffi.UintPtr> responsePtr,
    ffi.Pointer<ffi.Int32> responseLen,
  ) {
    return _sayHelloRaw(requestPtr, requestLen, responsePtr, responseLen);
  }

  int _collectStart(ffi.Pointer<ffi.Int32> handle) {
    return _collectStartRaw(handle);
  }

  int _collectSend(int handle, int requestPtr, int requestLen) {
    return _collectSendRaw(handle, requestPtr, requestLen);
  }

  int _collectFinish(
    int handle,
    ffi.Pointer<ffi.UintPtr> responsePtr,
    ffi.Pointer<ffi.Int32> responseLen,
  ) {
    return _collectFinishRaw(handle, responsePtr, responseLen);
  }

  int _collectCancel(int handle) {
    return _collectCancelRaw(handle);
  }

  int _broadcastStart(
    int requestPtr,
    int requestLen,
    ffi.Pointer<ffi.Int32> handle,
  ) {
    return _broadcastStartRaw(requestPtr, requestLen, handle);
  }

  int _broadcastRead(
    int handle,
    ffi.Pointer<ffi.UintPtr> responsePtr,
    ffi.Pointer<ffi.Int32> responseLen,
  ) {
    return _broadcastReadRaw(handle, responsePtr, responseLen);
  }

  int _broadcastFinish(int handle) {
    return _broadcastFinishRaw(handle);
  }

  int _broadcastCancel(int handle) {
    return _broadcastCancelRaw(handle);
  }

  int _chatStart(ffi.Pointer<ffi.Int32> handle) {
    return _chatStartRaw(handle);
  }

  int _chatSend(int handle, int requestPtr, int requestLen) {
    return _chatSendRaw(handle, requestPtr, requestLen);
  }

  int _chatRead(
    int handle,
    ffi.Pointer<ffi.UintPtr> responsePtr,
    ffi.Pointer<ffi.Int32> responseLen,
  ) {
    return _chatReadRaw(handle, responsePtr, responseLen);
  }

  int _chatCloseSend(int handle) {
    return _chatCloseSendRaw(handle);
  }

  int _chatFinish(int handle) {
    return _chatFinishRaw(handle);
  }

  int _chatCancel(int handle) {
    return _chatCancelRaw(handle);
  }

  int _release(int ptr) {
    return _rpccgoReleaseRaw(ptr);
  }

  int _takeErrorText(
    int errID,
    ffi.Pointer<ffi.UintPtr> textPtr,
    ffi.Pointer<ffi.Int32> textLen,
  ) {
    return _rpccgoTakeErrorTextRaw(errID, textPtr, textLen);
  }

  pb.SayHelloResponse SayHello(pb.SayHelloRequest request) {
    final responsePtr = pkg_ffi.calloc<ffi.UintPtr>();
    final responseLen = pkg_ffi.calloc<ffi.Int32>();
    final requestBytes = request.writeToBuffer();
    final requestPtr = _allocateBytes(requestBytes);
    try {
      final errID = _sayHello(
        requestPtr.address,
        requestBytes.length,
        responsePtr,
        responseLen,
      );
      _throwIfError(errID);
      final responseBytes = _takeBytes(responsePtr.value, responseLen.value);
      return pb.SayHelloResponse.fromBuffer(responseBytes);
    } finally {
      pkg_ffi.calloc.free(requestPtr);
      pkg_ffi.calloc.free(responsePtr);
      pkg_ffi.calloc.free(responseLen);
    }
  }

  GreeterCollectStream Collect() {
    final handlePtr = pkg_ffi.calloc<ffi.Int32>();
    try {
      final errID = _collectStart(handlePtr);
      _throwIfError(errID);
      return GreeterCollectStream._(this, handlePtr.value);
    } finally {
      pkg_ffi.calloc.free(handlePtr);
    }
  }

  GreeterBroadcastStream Broadcast(pb.SayHelloRequest request) {
    final handlePtr = pkg_ffi.calloc<ffi.Int32>();
    final requestBytes = request.writeToBuffer();
    final requestPtr = _allocateBytes(requestBytes);
    try {
      final errID = _broadcastStart(
        requestPtr.address,
        requestBytes.length,
        handlePtr,
      );
      _throwIfError(errID);
      return GreeterBroadcastStream._(this, handlePtr.value);
    } finally {
      pkg_ffi.calloc.free(requestPtr);
      pkg_ffi.calloc.free(handlePtr);
    }
  }

  GreeterChatStream Chat() {
    final handlePtr = pkg_ffi.calloc<ffi.Int32>();
    try {
      final errID = _chatStart(handlePtr);
      _throwIfError(errID);
      return GreeterChatStream._(this, handlePtr.value);
    } finally {
      pkg_ffi.calloc.free(handlePtr);
    }
  }

  ffi.Pointer<ffi.Uint8> _allocateBytes(List<int> data) {
    final ptr = pkg_ffi.calloc<ffi.Uint8>(data.length);
    ptr.asTypedList(data.length).setAll(0, data);
    return ptr;
  }

  typed_data.Uint8List _takeBytes(int ptr, int length) {
    if (length < 0) {
      throw StateError('rpccgo: response length is negative');
    }
    if (length == 0) {
      return typed_data.Uint8List(0);
    }
    if (ptr == 0) {
      throw StateError('rpccgo: response pointer is nil');
    }
    final data = typed_data.Uint8List.fromList(
      ffi.Pointer<ffi.Uint8>.fromAddress(ptr).asTypedList(length),
    );
    final status = _release(ptr);
    if (status != 0) {
      throw StateError('rpccgo: failed to release response buffer');
    }
    return data;
  }

  void _throwIfError(int errID) {
    if (errID == 0) {
      return;
    }
    throw StateError(_takeError(errID));
  }

  String _takeError(int errID) {
    final textPtr = pkg_ffi.calloc<ffi.UintPtr>();
    final textLen = pkg_ffi.calloc<ffi.Int32>();
    try {
      final status = _takeErrorText(errID, textPtr, textLen);
      if (status != 0) {
        return 'rpccgo error $errID';
      }
      final data = _takeBytes(textPtr.value, textLen.value);
      return convert.utf8.decode(data);
    } finally {
      pkg_ffi.calloc.free(textPtr);
      pkg_ffi.calloc.free(textLen);
    }
  }
}

class GreeterCollectStream {
  GreeterCollectStream._(this._client, this._handle);
  final GreeterRpccgoClient _client;
  final int _handle;
  void send(pb.SayHelloRequest request) {
    final requestBytes = request.writeToBuffer();
    final requestPtr = _client._allocateBytes(requestBytes);
    try {
      final errID = _client._collectSend(
        _handle,
        requestPtr.address,
        requestBytes.length,
      );
      _client._throwIfError(errID);
    } finally {
      pkg_ffi.calloc.free(requestPtr);
    }
  }

  pb.SayHelloResponse finish() {
    final responsePtr = pkg_ffi.calloc<ffi.UintPtr>();
    final responseLen = pkg_ffi.calloc<ffi.Int32>();
    try {
      final errID = _client._collectFinish(_handle, responsePtr, responseLen);
      _client._throwIfError(errID);
      final responseBytes = _client._takeBytes(
        responsePtr.value,
        responseLen.value,
      );
      return pb.SayHelloResponse.fromBuffer(responseBytes);
    } finally {
      pkg_ffi.calloc.free(responsePtr);
      pkg_ffi.calloc.free(responseLen);
    }
  }

  void cancel() {
    final errID = _client._collectCancel(_handle);
    _client._throwIfError(errID);
  }
}

class GreeterBroadcastStream {
  GreeterBroadcastStream._(this._client, this._handle);
  final GreeterRpccgoClient _client;
  final int _handle;
  pb.SayHelloResponse read() {
    final responsePtr = pkg_ffi.calloc<ffi.UintPtr>();
    final responseLen = pkg_ffi.calloc<ffi.Int32>();
    try {
      final errID = _client._broadcastRead(_handle, responsePtr, responseLen);
      _client._throwIfError(errID);
      final responseBytes = _client._takeBytes(
        responsePtr.value,
        responseLen.value,
      );
      return pb.SayHelloResponse.fromBuffer(responseBytes);
    } finally {
      pkg_ffi.calloc.free(responsePtr);
      pkg_ffi.calloc.free(responseLen);
    }
  }
